assets/css/main.css
/* FONTS */
@font-face {
    font-family: 'good_times';
    src: url('/assets/fonts/good_times_rg-webfont.woff2') format('woff2'),
         url('/assets/fonts/good_times_rg-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

/* SITE WIDE */

html {
    position: relative;
}

body,
html {
    height: 100%;
}

body {
    font-family: -apple-system, "helvetica neue", helvetica, sans-serif;
    background: none;
}

h1,
h2,
h3 {
    font-family: "good_times";
}

/* SPLASH */

.splash {
    height: 100%;
}

.title,
.headliner {
    text-shadow:
    -1px -1px 3px #fff,
    1px -1px 3px #fff,
    -1px 1px 3px #fff,
    1px 1px 3px #fff;
}

.title-bump {
    height: 3%;
}

.title {
    height: 37%;
}

.title h1 {
    color: black;
    display: inline-block;
}

.title h1 .top {
    font-size: 50px;
}

.title h1 .mid {
    line-height: 0.75em;
}

.title h1 .bot {
    font-size: 50px;
    float: right;
    padding-right: 10px;
}

.presents {
    text-align: center;
}

.date {
    height: 13%;
    text-align: center;
    margin-bottom: 15px;
}

.headliner {
    height: 35%;
    text-align: center;
}

.headliner h3 {
    margin: 0;
}

.headliner h1 {
    text-indent: -99999px;
    background: url(/assets/img/zedd.png) center center no-repeat;
    background-size: contain;
    height: 200px;
    margin: 0;
}

.navbar {
    height: 100px;
    background-color: rgb(83, 192, 195);
    clear: both;
    margin: 0;
    padding: 0;
}

.navbar .navbar-nav {
    margin: 0;

    /* h center */
    text-align: center;
    float: none;
}

.navbar .container,
.navbar .navbar-nav,
.navbar .navbar-nav li {
    /* v center */
    height: 100%;
}

.navbar .navbar-nav li:before {
  content: '';
  display: inline-block;
  height: 100%;
  vertical-align: middle;
}

.navbar .navbar-nav li {
    /* h center */
    display: inline-block;
    float: none;
}

.navbar .navbar-nav li a {
    color: white;
    font-family: "good_times";
    display: inline-block;
    vertical-align: middle;
}

.navbar .navbar-nav li a:hover,
.navbar .navbar-nav li.active a,
.navbar .navbar-nav li a:focus {
    background-color: initial;
    text-decoration: underline;
}

@media (max-width: 320px) {
    .splash {min-height: 350px;}

    .title h1 .mid {font-size: 70px;}
    .title h1 .top,
    .title h1 .bot {font-size: 14px;}

    .headliner h1 {height: 80px;}

    .presents,
    .date h3,
    .headliner h3 {font-size: 13px;}

    .navbar .navbar-nav li {margin: 0 0;}
    .navbar .navbar-nav li a {font-size: 12px; padding: 0 1px;}

    .name h1 {font-size: 30px; margin-top: 40px;}

    .bird-right {display: none;}
}


@media (min-width: 321px) {
    .splash {min-height: 400px;}

    .title h1 .mid {font-size: 90px;}
    .title h1 .top,
    .title h1 .bot {font-size: 20px;}

    .headliner h1 {height: 100px;}

    .presents,
    .date h3,
    .headliner h3 {font-size: 15px;}

    .navbar .navbar-nav li {margin: 0 0;}
    .navbar .navbar-nav li a {font-size: 15px; padding: 0 2px;}

    .name h1 {font-size: 30px; margin-top: 40px;}

    .bird-right {display: none;}
}

@media (min-width: 520px) {
    .splash {min-height: 600px;}

    .title h1 .mid {font-size: 120px;}
    .title h1 .top,
    .title h1 .bot {font-size: 20px;}

    .headliner h1 {height: 100px;}

    .presents,
    .date h3,
    .headliner h3 {font-size: 15px;}

    .navbar .navbar-nav li {margin: 0 0;}
    .navbar .navbar-nav li a {font-size: 17px; padding: 0 5px;}

    .name h1 {font-size: 30px; margin-top: 40px;}

    .bird-right {display: none;}
}

@media (min-width: 768px) {
    .splash {min-height: 675px;}

    .title h1 .mid {font-size: 150px;}
    .title h1 .top,
    .title h1 .bot {font-size: 30px;}

    .headliner h1 {height: 130px;}

    .presents,
    .date h3,
    .headliner h3 {font-size: 20px;}

    .navbar .navbar-nav li {margin: 0 0;}
    .navbar .navbar-nav li a {font-size: 25px;}

    .name h1 {font-size: 35px; margin-top: 35px;}

    .bird-right {display: none;}
}

@media (min-width: 992px) {
    .splash {min-height: 750px;}

    .title h1 .mid {font-size: 180px;}
    .title h1 .top,
    .title h1 .bot {font-size: 40px;}

    .headliner h1 {height: 160px;}

    .presents,
    .date h3,
    .headliner h3 {font-size: 20px;}

    .navbar .navbar-nav li {margin: 0 20px;}
    .navbar .navbar-nav li a {font-size: 30px;}

    .name h1 {font-size: 45px; margin-top: 30px;}

    .bird-right {display: initial;}
}

@media (min-width: 1200px) {
    .splash {min-height: 850px;}

    .title h1 .mid {font-size: 210px;}
    .title h1 .top,
    .title h1 .bot {font-size: 50px;}

    .headliner h1 {height: 200px;}

    .presents,
    .date h3,
    .headliner h3 {font-size: 25px;}

    .navbar .navbar-nav li {margin: 0 30px;}
    .navbar .navbar-nav li a {font-size: 35px;}

    .name h1 {font-size: 50px; margin-top: 25px;}

    .bird-right {display: initial;}
}

/* ALL NON-SPLASH */

.name {
    height: 200px;
    text-align: center;
    background-color: white;
}

.name h1 {
    height: 170px;
    margin-top: 15px;
    color: black;
    text-indent: -99999px;
    background: url(/assets/img/logo.jpg) center center no-repeat;
    background-size: contain;
}

.page {
    margin-top: 30px;
}

img.ticket {
    max-width: 100%;
}

/* DIRECTIONS */

img.map {
    max-width: 100%;
}

/* ARTISTS */

img.zedd {
    max-width: 100%;
}

/* BIRDS */

.bird-left {
    top: 60%;
    left: 5%;
    position: fixed;
    width: 40%;
    height: 40%;
    background: url(/assets/img/bird-left.png) top left no-repeat;
    background-size: contain;
}

.bird-right {
    bottom: 0;
    right: 0;
    position: fixed;
    height: 95%;
    width: 25%;
    background: url(/assets/img/bird-right.png) bottom right no-repeat;
    background-size: contain;
    z-index: -1;
}

